# MUSINKSBOT

./: README.md  config.example.yaml  pyproject.toml  requirements.txt
musinksbot/: __init__.py  config.py  discord_bot.py  embedder.py  gifs.py  indexing.py  lmstudio_client.py  logging_utils.py  preprocess.py  prompting.py  retrieval.py  style_profile.py
musinksbot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: build_index.py  build_style_profile.py  corpus_counts.py  engagement_demo.py  lmstudio_smoke.py  preprocess.py  retrieve_demo.py  run_bot.py
